Dashboard view + Customer main view + Market Main view + Connection with backend + Images + fragment view

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,9 @@
-title=Title
+title=OFFMarket - Startup Weekend
 appTitle = App Title
 appDescription=App Description
+
+dialogConfirmButtonText=OK
+CustomerMainText=Customer Main
+CompanyMainText=Company Main
+
+DashboardText=DashBoard
