--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,7 +3,11 @@ appTitle = App Title
 appDescription=App Description
 
 dialogConfirmButtonText=OK
-CustomerMainText=Customer Main
-CompanyMainText=Company Main
+CustomerMainText=Redentora Supermercados
+CompanyMainText=Redentora Supermercados
+ProductListText=Redentora Supermercados
+ProductOverviewText=Product Overview
+productListTitle=Produtos
+sectorListTitle=Setores
 
-DashboardText=DashBoard
+DashboardText=Dashboard
